# OnlineAdvisor

./: README.md
app/: CMakeLists.txt  build.gradle  local.properties  proguard-rules.pro
app/src/androidTest/java/cps/project/myapplication/: ApplicationTest.java
app/src/androidTest/java/edu/vt/ece/onlineadvisor/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fileInput.txt
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/: lp_lib.h  lpsolve_LpSolve.h
app/src/main/cpp/lp_solve_5.5.2.5_source/: .cproject  .project  lpsolve5j.cpp  lpsolve5jn.cpp
app/src/main/cpp/lp_solve_5.5.2.5_source/lp_solve_5.5/: lp_lib.c  lp_solveDLL.c  lp_solveDLL.h  lp_types.c
app/src/main/cpp/lp_solve_5.5.2.5_source/lp_solve_5.5/bfp/: lp_BFP.h  lp_BFP1.c  lp_BFP2.c
app/src/main/cpp/lp_solve_5.5.2.5_source/lp_solve_5.5/bfp/bfp_LUSOL/: bfp_LUSOL.c  bfp_LUSOL.h  lp_LUSOL.c
app/src/main/cpp/lp_solve_5.5.2.5_source/lp_solve_5.5/bfp/bfp_LUSOL/LUSOL/: hbio.c  lusol1.c  lusol2.c  lusol6a.c  lusol6l0.c  lusol6u.c  lusol7a.c  lusol8a.c  sparselib.c
app/src/main/cpp/lp_solve_5.5.2.5_source/lp_solve_5.5/shared/: commonlib.c  commonlib.h
app/src/main/java/cps/project/myapplication/: LPSolver.java  OnAire.java  OnlineAdvisorMainActivity.java  VehicleLocator.java
app/src/main/java/edu/vt/ece/onlineadvisor/: LPSolver.java  MainActivity.java  OnAire.java  OnlineAdvisorMainActivity.java  VehicleLocator.java
app/src/main/java/lpsolve/: LpSolve.java
app/src/main/res/layout/: activity_main.xml  activity_main_online_advisor.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cps/project/myapplication/: ExampleUnitTest.java
app/src/test/java/edu/vt/ece/onlineadvisor/: ExampleUnitTest.java
lpsolve55j/: build.gradle
